--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@ body.dark {
 a { color: var(--indigo); transition: color var(--transition); }
 a:hover { color: var(--light-brown); text-decoration: underline; }
 header {
+  <!-- Add inside header, before nav -->
+<div id="hamburger" tabindex="0" aria-label="Toggle navigation menu" role="button" aria-expanded="false">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+
   position: sticky; top: 0; background: var(--white);
   display: flex; justify-content: space-between; align-items: center;
   padding: 1rem 2rem; box-shadow: 0 2px 8px rgba(160, 82, 45, 0.08); z-index: 1000;
@@ -234,6 +241,45 @@ body.dark footer { background: #232323; color: #ccc; border-top: 1px solid #444;
 .social-float .instagram { background: linear-gradient(45deg, #f9ce34 0%, #ee2a7b 50%, #6228d7 100%);}
 .social-float a:hover { box-shadow: 0 6px 20px rgba(0,0,0,0.22);}
 @media (max-width: 768px) {
+  .btn {
+    width: 100%;
+    justify-content: center;
+  }
+  h2.section-title {
+    font-size: 1.6rem;
+  }
+  .profile {
+    flex-direction: column;
+    text-align: center;
+  }
+  .profile-img {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+  }
+  #programs .program-cards {
+    grid-template-columns: 1fr;
+  }
+  .program-card img {
+    height: auto;
+    max-height: 160px;
+  }
+  .contact-form button {
+    width: 100%;
+    align-self: center;
+  }
+  .donate-methods {
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  .donate-card {
+    width: 100%;
+  }
+}
+
+
+  /* Responsive improvements */
+@media (max-width: 768px) {
   #home h1 { font-size: 2.2rem; }
   #home p { font-size: 1.1rem; }
   .profile { flex-direction: column; text-align: center; }
@@ -241,8 +287,11 @@ body.dark footer { background: #232323; color: #ccc; border-top: 1px solid #444;
   .program-card { padding: 1.2rem 1rem; }
   .donate-methods { flex-direction: column; gap: 1.5rem; }
   nav { gap: 1rem; }
+  .btn-contact {
+    width: 100%; /* Added for better tap area */
+  }
+}
 
-  /* Responsive improvements */
 @media (max-width: 992px) {
   main {
     padding: 0 1rem;
@@ -324,6 +373,40 @@ body.dark footer { background: #232323; color: #ccc; border-top: 1px solid #444;
     padding: 1rem;
   }
 }
+/* Add to your CSS */
+#hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+  width: 30px;
+  height: 22px;
+}
+#hamburger span {
+  height: 4px;
+  background: var(--dark-brown);
+  border-radius: 2px;
+  transition: 0.3s;
+}
+@media (max-width: 768px) {
+  nav {
+    display: none;
+    flex-direction: column;
+    background: var(--white);
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    padding: 1rem 2rem;
+  }
+  #hamburger {
+    display: flex;
+  }
+  nav.active {
+    display: flex;
+  }
+}
+
 
 }
 </style>
@@ -501,6 +584,33 @@ function setMode(dark) {
   toggleBtn.textContent = dark ? '🌙' : '🌞';
   darkMode = dark;
 }
+  // Add to your existing script
+const hamburger = document.getElementById('hamburger');
+const nav = document.querySelector('nav');
+
+hamburger.addEventListener('click', () => {
+  const expanded = hamburger.getAttribute('aria-expanded') === 'true' || false;
+  hamburger.setAttribute('aria-expanded', !expanded);
+  nav.classList.toggle('active');
+});
+hamburger.addEventListener('keydown', e => {
+  if (e.key === 'Enter' || e.key === ' ') {
+    e.preventDefault();
+    hamburger.click();
+  }
+});
+// On page load
+const savedMode = localStorage.getItem('darkMode') === 'true';
+setMode(savedMode);
+
+// Update setMode function
+function setMode(dark) {
+  document.body.classList.toggle('dark', dark);
+  toggleBtn.textContent = dark ? '🌙' : '🌞';
+  darkMode = dark;
+  localStorage.setItem('darkMode', dark);
+}
+
 toggleBtn.addEventListener('click', () => setMode(!darkMode));
 </script>
 </body>
