--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@ body.dark footer { background: #232323; color: #ccc; border-top: 1px solid #444;
         <h3>Bank Transfer</h3>
         <p>
           <strong>Account Name:</strong> The Mind Building Youth Care Foundation<br />
-          <strong>Bank:</strong> Example Bank Plc<br />
-          <strong>Account Number:</strong> 1234567890
+          <strong>Bank:</strong> Fidelity Bank Plc <br />
+          <strong>Account Number:</strong> 560137980
         </p>
       </article>
       <article class="donate-card">
